--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -21,8 +21,9 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-amplify": "^1.106.1",
-    "@aws-cdk/aws-codecommit": "^1.106.1",
+    "@aws-cdk/aws-amplify": "1.106.1",
+    "@aws-cdk/aws-codecommit": "1.106.1",
+    "@aws-cdk/aws-route53": "1.106.1",
     "@aws-cdk/core": "1.106.1",
     "source-map-support": "^0.5.16"
   }
