--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -22,7 +22,10 @@
   },
   "dependencies": {
     "@aws-cdk/aws-amplify": "1.106.1",
+    "@aws-cdk/aws-codebuild": "^1.106.1",
     "@aws-cdk/aws-codecommit": "1.106.1",
+    "@aws-cdk/aws-codepipeline": "^1.106.1",
+    "@aws-cdk/aws-codepipeline-actions": "^1.106.1",
     "@aws-cdk/aws-route53": "1.106.1",
     "@aws-cdk/core": "1.106.1",
     "source-map-support": "^0.5.16"
