--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "ES2018",
     "module": "commonjs",
     "lib": ["es2018"],
+    "baseUrl": "lib",
+    "checkJs": true,
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
