--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -33,6 +33,7 @@
     "@aws-cdk/aws-route53-targets": "^1.128.0",
     "@aws-cdk/aws-s3": "^1.128.0",
     "@aws-cdk/core": "1.128.0",
+    "@aws-cdk/pipelines": "^1.128.0",
     "source-map-support": "^0.5.20"
   }
 }
