--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -28,6 +28,7 @@
     "@aws-cdk/aws-codecommit": "1.128.0",
     "@aws-cdk/aws-codepipeline": "^1.128.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.128.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.128.0",
     "@aws-cdk/aws-route53": "1.128.0",
     "@aws-cdk/aws-route53-patterns": "^1.128.0",
     "@aws-cdk/aws-route53-targets": "^1.128.0",
