--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@testing-library/user-event": "^13.4.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.0",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^16.0.30",
+    "@types/react-dom": "^16.0.9",
     "aws-amplify": "^4.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.0.2",
+    "react-dom": "^16.0.2",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "typescript": "^4.4.4",
