--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -21,20 +21,24 @@
     "typescript": "~4.4.4"
   },
   "dependencies": {
+    "@types/aws-lambda": "8.10.84",
     "@aws-cdk/aws-amplify": "1.128.0",
-    "@aws-cdk/aws-certificatemanager": "^1.128.0",
-    "@aws-cdk/aws-cloudfront": "^1.128.0",
-    "@aws-cdk/aws-codebuild": "^1.128.0",
+    "@aws-cdk/aws-certificatemanager": "1.128.0",
+    "@aws-cdk/aws-cloudfront": "1.128.0",
+    "@aws-cdk/aws-codebuild": "1.128.0",
     "@aws-cdk/aws-codecommit": "1.128.0",
-    "@aws-cdk/aws-codepipeline": "^1.128.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.128.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.128.0",
+    "@aws-cdk/aws-codepipeline": "1.128.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.128.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.128.0",
     "@aws-cdk/aws-route53": "1.128.0",
-    "@aws-cdk/aws-route53-patterns": "^1.128.0",
-    "@aws-cdk/aws-route53-targets": "^1.128.0",
-    "@aws-cdk/aws-s3": "^1.128.0",
+    "@aws-cdk/aws-route53-patterns": "1.128.0",
+    "@aws-cdk/aws-route53-targets": "1.128.0",
+    "@aws-cdk/aws-apigatewayv2": "1.128.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "1.128.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "1.128.0",
+    "@aws-cdk/aws-s3": "1.128.0",
     "@aws-cdk/core": "1.128.0",
-    "@aws-cdk/pipelines": "^1.128.0",
+    "@aws-cdk/pipelines": "1.128.0",
     "source-map-support": "^0.5.20"
   }
 }
