--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -14,14 +14,15 @@
     "@aws-cdk/assert": "1.128.0",
     "@types/jest": "^27.0.2",
     "@types/node": "16.11.0",
+    "@types/aws-lambda": "8.10.84",
     "aws-cdk": "1.128.0",
     "jest": "^27.2.5",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.4.4",
+    "aws-sdk": "2.1018.0"
   },
   "dependencies": {
-    "@types/aws-lambda": "8.10.84",
     "@aws-cdk/aws-amplify": "1.128.0",
     "@aws-cdk/aws-certificatemanager": "1.128.0",
     "@aws-cdk/aws-cloudfront": "1.128.0",
