--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-amplify": "^4.3.2",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
