--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react": "^16.0.30",
     "@types/react-dom": "^16.0.9",
     "aws-amplify": "^4.3.14",
+    "draft-js": "^0.11.7",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-loader-spinner": "^4.0.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.3.0",
@@ -48,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-router-dom": "^5.3.1"
   }
 }
