--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -31,6 +31,8 @@
     "@aws-cdk/aws-codepipeline": "1.128.0",
     "@aws-cdk/aws-codepipeline-actions": "1.128.0",
     "@aws-cdk/aws-lambda-nodejs": "1.128.0",
+    "@aws-cdk/aws-lambda-python": "1.128.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.128.0",
     "@aws-cdk/aws-route53": "1.128.0",
     "@aws-cdk/aws-route53-patterns": "1.128.0",
     "@aws-cdk/aws-route53-targets": "1.128.0",
