--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "typescript": "^4.4.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@types/draft-js": "^0.11.9",
     "@types/react-draft-wysiwyg": "^1.13.4",
-    "@types/react-router-dom": "^5.3.1"
+    "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.4"
   }
 }
