--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -26,6 +26,7 @@
     "@aws-cdk/aws-amplify": "1.128.0",
     "@aws-cdk/aws-certificatemanager": "1.128.0",
     "@aws-cdk/aws-cloudfront": "1.128.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.128.0",
     "@aws-cdk/aws-codebuild": "1.128.0",
     "@aws-cdk/aws-codecommit": "1.128.0",
     "@aws-cdk/aws-codepipeline": "1.128.0",
